lab-kube/setup_sonarqube/input/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: aws
  labels:
    app: sonarqube
  name: sonarqube-sonarqube
spec:
  ingressClassName: aws
  rules:
    - host: sonarqube.devops-ontap.com
      http:
        paths:
          - backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
            path: /
            pathType: Prefix
